- handle new drivers:
  o ethernet: r6040
  o gigabit: atl1e
  o PATA: pata_ninja32, pata_ns87415
- add product type to URL when fetching mirror list

Version 11.3 - 4 August 2008

- fix spacing around buttons

Version 11.2 - 31 July 2008

- include extmod Xorg module (for SHAPE extension)

Version 11.1 - 31 July 2008

- do not require matchbox gconf schema (not provided by drakx-installer-matchbox)

Version 11.0 - 30 July 2008

- first steps toward new installer style

Version 10.48 - 28 July 2008

- 2009.0 beta 1 logo
- drakx-in-chroot: prefer Xephyr over Xnest since Xnest lacks many
  extensions needed by matchbox-window-manager

Version 10.47 - 10 July 2008

- load disk/scsi before disk/ide since libata is now the default
  (to prevent modules::load_category from loading ide-generic too early)
- fix reading and setting kdmrc (by resolving alternative in chroot)

Version 10.46 - 10 July 2008

- authentication:
  o add back fix to force the password to be utf8 (#23273)
  o fix reading md5/shadow options in /etc/pam.d/system-auth

Version 10.45 - 9 July 2008

- update autologin file path for kdm4
- default to KDE4 (instead of KDE) if kdm config exists when reading
  autologin configuration
- change default authentication to local (instead of ldap)

Version 10.44 - 8 July 2008

- 2009.0 alpha 2 logo

Version 10.43 - 4 July 2008

- detect KDE4 when configuring autologin

Version 10.42 - 26 June 2008

- fix reading rpm macros from /etc/macros.d/ (esp. %_filetriggers_dir)

Version 10.41 - 26 June 2008

- 2009.0 alpha 1 logo

Version 10.40 - 25 June 2008

- add support for dm-raid4-5 (tmb)
- add back desktop choice window (by checking task-kde4 instead of task-kde)

Version 10.38 - 20 June 2008

- force back 75dpi to get back previous font sizes
- adapt to cooker file changes
- do not let authentication module (used for ask_user_and_root) mess window size

Version 10.36 - 12 June 2008

- fix authentication configuration

Version 10.35 - 12 June 2008
