@@ -1,7 +1,10 @@
 - handle new drivers:
   o ethernet: r6040
-  o gigabit: atl1e
+  o gigabit: atl1e, bnx2x, sfc
   o PATA: pata_ninja32, pata_ns87415
+  o SCSI: mvsas
+  o WAN: lapbether
+  o wireless: rndis_wlan, rtl8180
 - add product type to URL when fetching mirror list
 
 Version 11.3 - 4 August 2008
